<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cookie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_background"
    android:gravity="center_vertical">


    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/custom_cookie_btn_new"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="36dp" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/custom_title"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/custom_message"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/custom_cookie_btn_new"
        app:layout_constraintTop_toTopOf="@+id/custom_cookie_btn_new" />


    <Button
        android:id="@+id/custom_cookie_btn_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newBtn"
        app:layout_constraintBottom_toTopOf="@+id/custom_cookie_btn_open"
        app:layout_constraintTop_toBottomOf="@+id/iv_icon"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/custom_cookie_btn_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open"
        app:layout_constraintBottom_toTopOf="@+id/custom_cookie_btn_save"
        app:layout_constraintTop_toBottomOf="@+id/custom_cookie_btn_new"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/custom_cookie_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_cookie_btn_open"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/btn_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:foreground="?selectableItemBackground"
        android:text="Cancel"
        android:textColor="@color/default_action_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>